fix: set margin for scrollbar

--- a/src/app/container/order-editor/order-editor.component.scss
+++ b/src/app/container/order-editor/order-editor.component.scss
@@ -28,7 +28,7 @@
   padding: 24px 0;
   z-index: 1;
   left: 0;
-  right: 0;
+  right: 16px;
 }
 
 .order-editor__btn--nav {
